# mcts_routing

./: .gitignore  DELLA_INFERENCE_GUIDE.md  DELLA_RUN_GUIDE.md  ENCODER_FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  ONE_COMMAND_SCP.sh  ONE_COMMAND_SCP_ALL.sh  QUICK_START.md  README.md  RETRAIN_GUIDE.md  SCP_ALL_COMPREHENSIVE.sh  SCP_COMMANDS.sh  complete_training_workflow.sh  fix_critic_none.patch  pyproject.toml  requirements.txt  run_mcts_command.sh  scp_all_changes.sh  scp_all_to_della.sh  scp_batch_commands.sh  scp_one_command.txt  scp_quick.sh  scp_single_command.sh  scp_these_files.sh  scp_to_adroit.sh  scp_to_della.sh  setup.py
configs/critic/: training.yaml
configs/diffusion/: base.yaml  ddim.yaml  ddpm.yaml  sde.yaml
configs/experiments/: ablation.yaml  milestone1_toy.yaml  milestone2_mcts.yaml
configs/mcts/: base.yaml  progressive_widening.yaml
configs/placer/: base.yaml  fast.yaml
configs/routing/: fpga_base.yaml  grid_100x100.yaml
configs/training/: base.yaml  della_critic.yaml  della_diffusion.yaml  h100_cluster.yaml  routing_diffusion.yaml
docs/: DELLA_CLUSTER_SETUP.md  IMPLEMENTATION_STATUS.md  thesis.txt
experiments/: full_pipeline.py  inference.py  run_mcts.py  run_mcts_inference.py  train.py  train_critic.py  train_joint.py  train_routing.py
scripts/: create_test_netlist.py  demo_diffusion.py  generate_algorithmic_routing_data.py  generate_critic_data.py  generate_routing_data.py  generate_synthetic_diffusion_data.py  monitor_training.sh  run_inference.py  run_inference.sh  setup_adroit.sh  setup_cluster.sh  setup_della.sh  submit_job.sh  submit_training.sh  upgrade_to_cuda.sh  validate_shared_encoders.py  visualize_routing_data.py  visualize_single_sample.py
scripts/slurm/: generate_critic_data.sh  generate_critic_data_adroit.sh  generate_data.sh  run_inference.sh  run_mcts.sh  run_mcts_gpu.sh  train_critic.sh  train_critic_adroit.sh  train_critic_only.sh  train_diffusion.sh  train_diffusion_adroit.sh  train_joint.sh
src/: __init__.py
src/bridge/: CMakeLists.txt  __init__.py  bindings.cpp  placement_io.py  router.py
src/comparison/: __init__.py  compute_parity.py  ddim_vs_mcts.py  mcts_vs_bestofn.py  semantic_branching_ablation.py  statistical_tests.py
src/core/: __init__.py
src/core/diffusion/: __init__.py  conditioning.py  forward_process.py  model.py  sampler.py  schedule.py
src/core/reward/: __init__.py  metrics.py  normalization.py  reward.py
src/core/routing/: __init__.py  constraints.py  grid.py  netlist.py  placement.py  state.py
src/critic/: __init__.py  features.py  gnn.py  training.py
src/diffusion/: __init__.py  model.py  sampler.py  schedule.py
src/inference/: ddim_inference.py  mcts_diffusion.py
src/integration/: __init__.py
src/integration/nextpnr/: __init__.py  reader.py  validator.py  writer.py
src/integration/xilinx/: __init__.py  xray_interface.py
src/legacy/: __init__.py
src/legacy/decoding/: __init__.py  decoder.py  post_process.py  potential_decoder.py
src/legacy/mcts_routing/: __init__.py  backpropagation.py  (+10 more)
src/mcts/: __init__.py  backprop.py  node.py  search.py  tree.py  ucb.py
src/models/: unet.py  value_network.py
src/shared/: __init__.py  encoders.py
src/training/: loss.py  routing_trainer.py  trainer.py
src/utils/: logging.py  seed.py
tests/: conftest.py
tests/property/: test_lipschitz.py  test_solver_stability.py  test_variance_scaling.py
tests/unit/: test_bridge.py  test_critic.py  test_placer.py
(+18 files in other folders)
